Update: Add 'Seleksi Weekdays dan Weekends pada Data Deret Waktu' Tricks
- Add 'Seleksi Weekdays dan Weekends' points

--- a/Trik_Pandas_12.ipynb
+++ b/Trik_Pandas_12.ipynb
@@ -7,7 +7,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "1d86f720",
+   "id": "83ec2469",
    "metadata": {},
    "source": [
     "![Pandas_logo.png](attachment:Pandas_logo.png)"
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dffeb698",
+   "id": "ff73340e",
    "metadata": {},
    "source": [
     "# Title: Pandas 12"
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9166ed60",
+   "id": "7b827f6d",
    "metadata": {},
    "source": [
     "#### \n",
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d29b093a",
+   "id": "4c0742ef",
    "metadata": {},
    "source": [
     "#### Import Modules"
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "9927ffc7",
+   "id": "a6ade7dd",
    "metadata": {},
    "outputs": [
     {
@@ -56,12 +56,13 @@
    "source": [
     "import pandas as pd\n",
     "\n",
+    "# Cek versi\n",
     "print(pd.__version__)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9098b919",
+   "id": "74c796c3",
    "metadata": {},
    "source": [
     "#### Persiapan Data Frame"
@@ -70,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "764c14af",
+   "id": "750fa9ff",
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +211,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba25e9e7",
+   "id": "71c7333f",
    "metadata": {},
    "source": [
     "#### Memadukan `loc` dan `iloc` untuk Melakukan Seleksi Data"
@@ -218,7 +219,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36b3f2a7",
+   "id": "f5b1f2b5",
    "metadata": {},
    "source": [
     "- Sisi sebelah kiri merepresentasikan baris sedangkan sisi sebelah kanan merepresentasikan kolom.\n",
@@ -229,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "9caab005",
+   "id": "0ff63d8f",
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "39d2eb38",
+   "id": "7531eb74",
    "metadata": {},
    "outputs": [
     {
@@ -394,6 +395,400 @@
    ],
    "source": [
     "df.loc[:, 'name':'age'].iloc[15:20, :]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "82f4c4a5",
+   "metadata": {},
+   "source": [
+    "#### \n",
+    "### #46 Seleksi Weekdays dan Weekends pada Data Deret Waktu\n",
+    "#### Source : https://youtu.be/7I9DlFkyzVQ"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e8c020bd",
+   "metadata": {},
+   "source": [
+    "#### Import Modules"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "dd9cda45",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.2.4\n",
+      "1.20.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# Cek versi\n",
+    "print(pd.__version__)\n",
+    "print(np.__version__)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "369a77a4",
+   "metadata": {},
+   "source": [
+    "#### Persiapan Data Frame"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "40ee1076",
+   "metadata": {},
+   "source": [
+    "- Membuat sebuah data frame  yang terdiri dari 2 kolom dan 365 baris yang memiliki nilai angka acak 1-20."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "f4d9970b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\alber\\anaconda3\\lib\\site-packages\\pandas\\util\\__init__.py:8: FutureWarning: pandas.util.testing is deprecated. Use the functions in the public API at pandas.testing instead.\n",
+      "  import pandas.util.testing\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>col1</th>\n",
+       "      <th>col2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2000-01-01</th>\n",
+       "      <td>14</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-01-02</th>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-01-03</th>\n",
+       "      <td>6</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-01-04</th>\n",
+       "      <td>13</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-01-05</th>\n",
+       "      <td>14</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-12-26</th>\n",
+       "      <td>6</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-12-27</th>\n",
+       "      <td>16</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-12-28</th>\n",
+       "      <td>13</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-12-29</th>\n",
+       "      <td>15</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-12-30</th>\n",
+       "      <td>6</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>365 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            col1  col2\n",
+       "2000-01-01    14     5\n",
+       "2000-01-02     3     6\n",
+       "2000-01-03     6     2\n",
+       "2000-01-04    13     6\n",
+       "2000-01-05    14    15\n",
+       "...          ...   ...\n",
+       "2000-12-26     6     5\n",
+       "2000-12-27    16     9\n",
+       "2000-12-28    13    15\n",
+       "2000-12-29    15     9\n",
+       "2000-12-30     6     8\n",
+       "\n",
+       "[365 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n_rows = 365\n",
+    "n_cols = 2\n",
+    "cols = ['col1', 'col2']\n",
+    "\n",
+    "df = pd.DataFrame(np.random.randint(1, 20, size=(n_rows, n_cols)), \n",
+    "                  columns=cols)\n",
+    "\n",
+    "df.index = pd.util.testing.makeDateIndex(n_rows, freq='D')\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8513ee87",
+   "metadata": {},
+   "source": [
+    "#### Seleksi Weekdays dan Weekends"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d6794c08",
+   "metadata": {},
+   "source": [
+    "- Parameter dayofweek mengindikasi hari pada suatu minggu tertentu.\n",
+    "- 5 index pertama mengindikasikan weekdays (0 - 4), sedangkan 2 index terakhir mengindikasikan weekend (5 - 6).\n",
+    "- Lanjut: 0 adalah senin dan 6 adalah minggu."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "2bcc789b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>col1</th>\n",
+       "      <th>col2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2000-01-03</th>\n",
+       "      <td>6</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-01-04</th>\n",
+       "      <td>13</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-01-05</th>\n",
+       "      <td>14</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-01-06</th>\n",
+       "      <td>3</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-01-07</th>\n",
+       "      <td>17</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-01-10</th>\n",
+       "      <td>13</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-01-11</th>\n",
+       "      <td>7</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            col1  col2\n",
+       "2000-01-03     6     2\n",
+       "2000-01-04    13     6\n",
+       "2000-01-05    14    15\n",
+       "2000-01-06     3    11\n",
+       "2000-01-07    17    18\n",
+       "2000-01-10    13    16\n",
+       "2000-01-11     7    15"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "weekdays_df = df[df.index.dayofweek.isin([0, 1, 2, 3, 4])]\n",
+    "weekdays_df.head(7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "9109a68a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>col1</th>\n",
+       "      <th>col2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2000-01-01</th>\n",
+       "      <td>14</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-01-02</th>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-01-08</th>\n",
+       "      <td>19</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-01-09</th>\n",
+       "      <td>11</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-01-15</th>\n",
+       "      <td>11</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-01-16</th>\n",
+       "      <td>9</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-01-22</th>\n",
+       "      <td>12</td>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            col1  col2\n",
+       "2000-01-01    14     5\n",
+       "2000-01-02     3     6\n",
+       "2000-01-08    19    10\n",
+       "2000-01-09    11     5\n",
+       "2000-01-15    11    15\n",
+       "2000-01-16     9     6\n",
+       "2000-01-22    12    19"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "weekends_df = df[df.index.dayofweek.isin([5, 6])]\n",
+    "weekends_df.head(7)"
    ]
   }
  ],
