Update: Add 'Penanganan Kolom dengan Tipe Data Beragam' tricks
- Add 'Deteksi dan Penanganan Kolom dengan Tipe Data Beragam (Mixed Data Types)' points

--- a/Trik_Pandas_12.ipynb
+++ b/Trik_Pandas_12.ipynb
@@ -7,7 +7,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "83ec2469",
+   "id": "0828077b",
    "metadata": {},
    "source": [
     "![Pandas_logo.png](attachment:Pandas_logo.png)"
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff73340e",
+   "id": "3a02fd86",
    "metadata": {},
    "source": [
     "# Title: Pandas 12"
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b827f6d",
+   "id": "657c6cb9",
    "metadata": {},
    "source": [
     "#### \n",
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c0742ef",
+   "id": "92b7e89c",
    "metadata": {},
    "source": [
     "#### Import Modules"
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a6ade7dd",
+   "id": "ff374906",
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74c796c3",
+   "id": "32007500",
    "metadata": {},
    "source": [
     "#### Persiapan Data Frame"
@@ -71,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "750fa9ff",
+   "id": "2f13cf07",
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71c7333f",
+   "id": "d017b3c5",
    "metadata": {},
    "source": [
     "#### Memadukan `loc` dan `iloc` untuk Melakukan Seleksi Data"
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5b1f2b5",
+   "id": "bd6ef95f",
    "metadata": {},
    "source": [
     "- Sisi sebelah kiri merepresentasikan baris sedangkan sisi sebelah kanan merepresentasikan kolom.\n",
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "0ff63d8f",
+   "id": "561bf180",
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "7531eb74",
+   "id": "daa7eab2",
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82f4c4a5",
+   "id": "d9a43921",
    "metadata": {},
    "source": [
     "#### \n",
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8c020bd",
+   "id": "bfe10dcd",
    "metadata": {},
    "source": [
     "#### Import Modules"
@@ -418,7 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "dd9cda45",
+   "id": "921f2eca",
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "369a77a4",
+   "id": "941a84e8",
    "metadata": {},
    "source": [
     "#### Persiapan Data Frame"
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40ee1076",
+   "id": "edf0a011",
    "metadata": {},
    "source": [
     "- Membuat sebuah data frame  yang terdiri dari 2 kolom dan 365 baris yang memiliki nilai angka acak 1-20."
@@ -458,7 +458,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "f4d9970b",
+   "id": "65cdbc75",
    "metadata": {},
    "outputs": [
     {
@@ -497,28 +497,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>2000-01-01</th>\n",
-       "      <td>14</td>\n",
-       "      <td>5</td>\n",
+       "      <td>16</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2000-01-02</th>\n",
-       "      <td>3</td>\n",
-       "      <td>6</td>\n",
+       "      <td>17</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2000-01-03</th>\n",
-       "      <td>6</td>\n",
-       "      <td>2</td>\n",
+       "      <td>7</td>\n",
+       "      <td>13</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2000-01-04</th>\n",
-       "      <td>13</td>\n",
-       "      <td>6</td>\n",
+       "      <td>10</td>\n",
+       "      <td>14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2000-01-05</th>\n",
-       "      <td>14</td>\n",
-       "      <td>15</td>\n",
+       "      <td>8</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -527,28 +527,28 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2000-12-26</th>\n",
-       "      <td>6</td>\n",
-       "      <td>5</td>\n",
+       "      <td>8</td>\n",
+       "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2000-12-27</th>\n",
-       "      <td>16</td>\n",
-       "      <td>9</td>\n",
+       "      <td>19</td>\n",
+       "      <td>13</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2000-12-28</th>\n",
-       "      <td>13</td>\n",
-       "      <td>15</td>\n",
+       "      <td>1</td>\n",
+       "      <td>12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2000-12-29</th>\n",
-       "      <td>15</td>\n",
-       "      <td>9</td>\n",
+       "      <td>6</td>\n",
+       "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2000-12-30</th>\n",
-       "      <td>6</td>\n",
-       "      <td>8</td>\n",
+       "      <td>14</td>\n",
+       "      <td>13</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -557,17 +557,17 @@
       ],
       "text/plain": [
        "            col1  col2\n",
-       "2000-01-01    14     5\n",
-       "2000-01-02     3     6\n",
-       "2000-01-03     6     2\n",
-       "2000-01-04    13     6\n",
-       "2000-01-05    14    15\n",
+       "2000-01-01    16     3\n",
+       "2000-01-02    17     1\n",
+       "2000-01-03     7    13\n",
+       "2000-01-04    10    14\n",
+       "2000-01-05     8     6\n",
        "...          ...   ...\n",
-       "2000-12-26     6     5\n",
-       "2000-12-27    16     9\n",
-       "2000-12-28    13    15\n",
-       "2000-12-29    15     9\n",
-       "2000-12-30     6     8\n",
+       "2000-12-26     8     7\n",
+       "2000-12-27    19    13\n",
+       "2000-12-28     1    12\n",
+       "2000-12-29     6     8\n",
+       "2000-12-30    14    13\n",
        "\n",
        "[365 rows x 2 columns]"
       ]
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8513ee87",
+   "id": "050f4b09",
    "metadata": {},
    "source": [
     "#### Seleksi Weekdays dan Weekends"
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6794c08",
+   "id": "9e2ba00c",
    "metadata": {},
    "source": [
     "- Parameter dayofweek mengindikasi hari pada suatu minggu tertentu.\n",
@@ -610,7 +610,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "2bcc789b",
+   "id": "e209f576",
    "metadata": {},
    "outputs": [
     {
@@ -641,38 +641,38 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>2000-01-03</th>\n",
-       "      <td>6</td>\n",
-       "      <td>2</td>\n",
+       "      <td>7</td>\n",
+       "      <td>13</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2000-01-04</th>\n",
-       "      <td>13</td>\n",
-       "      <td>6</td>\n",
+       "      <td>10</td>\n",
+       "      <td>14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2000-01-05</th>\n",
-       "      <td>14</td>\n",
-       "      <td>15</td>\n",
+       "      <td>8</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2000-01-06</th>\n",
-       "      <td>3</td>\n",
-       "      <td>11</td>\n",
+       "      <td>18</td>\n",
+       "      <td>10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2000-01-07</th>\n",
-       "      <td>17</td>\n",
-       "      <td>18</td>\n",
+       "      <td>15</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2000-01-10</th>\n",
+       "      <td>2</td>\n",
        "      <td>13</td>\n",
-       "      <td>16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2000-01-11</th>\n",
-       "      <td>7</td>\n",
-       "      <td>15</td>\n",
+       "      <td>16</td>\n",
+       "      <td>8</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -680,13 +680,13 @@
       ],
       "text/plain": [
        "            col1  col2\n",
-       "2000-01-03     6     2\n",
-       "2000-01-04    13     6\n",
-       "2000-01-05    14    15\n",
-       "2000-01-06     3    11\n",
-       "2000-01-07    17    18\n",
-       "2000-01-10    13    16\n",
-       "2000-01-11     7    15"
+       "2000-01-03     7    13\n",
+       "2000-01-04    10    14\n",
+       "2000-01-05     8     6\n",
+       "2000-01-06    18    10\n",
+       "2000-01-07    15     1\n",
+       "2000-01-10     2    13\n",
+       "2000-01-11    16     8"
       ]
      },
      "execution_count": 7,
@@ -702,7 +702,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "9109a68a",
+   "id": "72f924b7",
    "metadata": {},
    "outputs": [
     {
@@ -733,38 +733,38 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>2000-01-01</th>\n",
-       "      <td>14</td>\n",
-       "      <td>5</td>\n",
+       "      <td>16</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2000-01-02</th>\n",
-       "      <td>3</td>\n",
-       "      <td>6</td>\n",
+       "      <td>17</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2000-01-08</th>\n",
-       "      <td>19</td>\n",
-       "      <td>10</td>\n",
+       "      <td>1</td>\n",
+       "      <td>16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2000-01-09</th>\n",
-       "      <td>11</td>\n",
+       "      <td>19</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2000-01-15</th>\n",
        "      <td>11</td>\n",
-       "      <td>15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2000-01-16</th>\n",
-       "      <td>9</td>\n",
        "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>2000-01-16</th>\n",
+       "      <td>14</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>2000-01-22</th>\n",
-       "      <td>12</td>\n",
        "      <td>19</td>\n",
+       "      <td>18</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -772,13 +772,13 @@
       ],
       "text/plain": [
        "            col1  col2\n",
-       "2000-01-01    14     5\n",
-       "2000-01-02     3     6\n",
-       "2000-01-08    19    10\n",
-       "2000-01-09    11     5\n",
-       "2000-01-15    11    15\n",
-       "2000-01-16     9     6\n",
-       "2000-01-22    12    19"
+       "2000-01-01    16     3\n",
+       "2000-01-02    17     1\n",
+       "2000-01-08     1    16\n",
+       "2000-01-09    19     5\n",
+       "2000-01-15    11     6\n",
+       "2000-01-16    14    17\n",
+       "2000-01-22    19    18"
       ]
      },
      "execution_count": 8,
@@ -789,6 +789,257 @@
    "source": [
     "weekends_df = df[df.index.dayofweek.isin([5, 6])]\n",
     "weekends_df.head(7)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "967cf07f",
+   "metadata": {},
+   "source": [
+    "#### \n",
+    "### #47 Penanganan Kolom dengan Tipe Data Beragam\n",
+    "#### Source : https://youtu.be/E-WoMJx-bNk"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b67b9f27",
+   "metadata": {},
+   "source": [
+    "#### Import Modules"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "82967253",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.2.4\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Cek versi\n",
+    "print(pd.__version__)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "58df8d2f",
+   "metadata": {},
+   "source": [
+    "#### Persiapan Data Frame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "9e2c4ac2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>nama</th>\n",
+       "      <th>ipk</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>bejo</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>tejo</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>wati</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>tiwi</td>\n",
+       "      <td>2.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>cecep</td>\n",
+       "      <td>3.25</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    nama   ipk\n",
+       "0   bejo     2\n",
+       "1   tejo     3\n",
+       "2   wati     3\n",
+       "3   tiwi  2.75\n",
+       "4  cecep  3.25"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d = {'nama':['bejo', 'tejo', 'wati', 'tiwi', 'cecep'], \n",
+    "     'ipk':[2, '3', 3, 2.75, '3.25']}\n",
+    "df = pd.DataFrame(d)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eca7d198",
+   "metadata": {},
+   "source": [
+    "#### Deteksi dan Penanganan Kolom dengan Tipe Data Beragam (Mixed Data Types)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "215128a4",
+   "metadata": {},
+   "source": [
+    "- Untuk mengetahui mixed data type di kolom IPK, kita perlu memanggil fungsi  `apply(type)` di kolom IPK.\n",
+    "- Untuk melihat hasil dari data type pada kolom di data frame, kita dapat memanggil fungsi `value_counts()`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "96a32732",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "nama    object\n",
+       "ipk     object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "f14a3caf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      <class 'int'>\n",
+       "1      <class 'str'>\n",
+       "2      <class 'int'>\n",
+       "3    <class 'float'>\n",
+       "4      <class 'str'>\n",
+       "Name: ipk, dtype: object"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['ipk'].apply(type)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "1a5368ab",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<class 'str'>      2\n",
+       "<class 'int'>      2\n",
+       "<class 'float'>    1\n",
+       "Name: ipk, dtype: int64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['ipk'].apply(type).value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "c858019b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['ipk'] = df['ipk'].astype(float)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "bfaf1d8c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<class 'float'>    5\n",
+       "Name: ipk, dtype: int64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['ipk'].apply(type).value_counts()"
    ]
   }
  ],
