--- a/Trik_Pandas_13.ipynb
+++ b/Trik_Pandas_13.ipynb
@@ -497,6 +497,291 @@
     "\n",
     "df[[f'{part}WidthCm', f'{part}LengthCm']].head()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b9eb7302",
+   "metadata": {},
+   "source": [
+    "#### \n",
+    "### #50 Membuat Kolom Baru dengan for loop dan f-string\n",
+    "#### Source : https://youtu.be/6i5OQ_F3x7A"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "222acfa7",
+   "metadata": {},
+   "source": [
+    "#### Import Modules"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "1ebcad9a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.2.4\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Cek versi\n",
+    "print(pd.__version__)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2a49b404",
+   "metadata": {},
+   "source": [
+    "#### Persiapan Data Frame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "ca5096a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>penjual</th>\n",
+       "      <th>barang</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>bejo</td>\n",
+       "      <td>monitor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>tejo</td>\n",
+       "      <td>monitor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>wati</td>\n",
+       "      <td>keyboard</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>bejo</td>\n",
+       "      <td>mouse</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>cecep</td>\n",
+       "      <td>keyboard</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>tejo</td>\n",
+       "      <td>monitor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>wati</td>\n",
+       "      <td>laptop</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>bejo</td>\n",
+       "      <td>monitor</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  penjual    barang\n",
+       "0    bejo   monitor\n",
+       "1    tejo   monitor\n",
+       "2    wati  keyboard\n",
+       "3    bejo     mouse\n",
+       "4   cecep  keyboard\n",
+       "5    tejo   monitor\n",
+       "6    wati    laptop\n",
+       "7    bejo   monitor"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d = {'penjual':['bejo', 'tejo', 'wati', 'bejo', 'cecep', 'tejo', 'wati', 'bejo'], \n",
+    "     'barang':['monitor', 'monitor', 'keyboard', 'mouse', 'keyboard', 'monitor', 'laptop', 'monitor']}\n",
+    "\n",
+    "df = pd.DataFrame(d)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "19643c42",
+   "metadata": {},
+   "source": [
+    "#### Membuat Kolom Baru dengan `for loop` dan `f-string`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "317d6776",
+   "metadata": {},
+   "source": [
+    "- Kita bisa menggunakan looping dan f-string untuk membuat beberapa kolom baru sekaligus.\n",
+    "- Contohnya dapat kita dapat membuat 2 kolom sekaligus seperti terlihat dibawah ini."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "e69fcc47",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>penjual</th>\n",
+       "      <th>barang</th>\n",
+       "      <th>count_tiap_penjual</th>\n",
+       "      <th>count_tiap_barang</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>bejo</td>\n",
+       "      <td>monitor</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>tejo</td>\n",
+       "      <td>monitor</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>wati</td>\n",
+       "      <td>keyboard</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>bejo</td>\n",
+       "      <td>mouse</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>cecep</td>\n",
+       "      <td>keyboard</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>tejo</td>\n",
+       "      <td>monitor</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>wati</td>\n",
+       "      <td>laptop</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>bejo</td>\n",
+       "      <td>monitor</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  penjual    barang  count_tiap_penjual  count_tiap_barang\n",
+       "0    bejo   monitor                   1                  1\n",
+       "1    tejo   monitor                   1                  2\n",
+       "2    wati  keyboard                   1                  1\n",
+       "3    bejo     mouse                   2                  1\n",
+       "4   cecep  keyboard                   1                  2\n",
+       "5    tejo   monitor                   2                  3\n",
+       "6    wati    laptop                   2                  1\n",
+       "7    bejo   monitor                   3                  4"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cols = ['penjual', 'barang']\n",
+    "\n",
+    "for col in cols:\n",
+    "    df[f'count_tiap_{col}'] =  df.groupby(col).cumcount() + 1\n",
+    "    \n",
+    "df"
+   ]
   }
  ],
  "metadata": {
