--- a/Trik_Pandas_13.ipynb
+++ b/Trik_Pandas_13.ipynb
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9eb7302",
+   "id": "fb19eda9",
    "metadata": {},
    "source": [
     "#### \n",
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "222acfa7",
+   "id": "b88facf7",
    "metadata": {},
    "source": [
     "#### Import Modules"
@@ -519,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "1ebcad9a",
+   "id": "0e96ae2b",
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a49b404",
+   "id": "e0e7ced0",
    "metadata": {},
    "source": [
     "#### Persiapan Data Frame"
@@ -548,7 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "ca5096a8",
+   "id": "a74f956f",
    "metadata": {},
    "outputs": [
     {
@@ -648,7 +648,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19643c42",
+   "id": "c8881605",
    "metadata": {},
    "source": [
     "#### Membuat Kolom Baru dengan `for loop` dan `f-string`"
@@ -656,7 +656,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "317d6776",
+   "id": "48db9133",
    "metadata": {},
    "source": [
     "- Kita bisa menggunakan looping dan f-string untuk membuat beberapa kolom baru sekaligus.\n",
@@ -666,7 +666,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "e69fcc47",
+   "id": "3dabddb2",
    "metadata": {},
    "outputs": [
     {
@@ -781,6 +781,361 @@
     "    df[f'count_tiap_{col}'] =  df.groupby(col).cumcount() + 1\n",
     "    \n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f6e39569",
+   "metadata": {},
+   "source": [
+    "#### \n",
+    "### #51 Seleksi Baris dengan between\n",
+    "#### Source : https://youtu.be/yzpARuObplg"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "73be992d",
+   "metadata": {},
+   "source": [
+    "#### Import Modules"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "a7343999",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.2.4\n",
+      "1.20.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# Cek versi\n",
+    "print(pd.__version__)\n",
+    "print(np.__version__)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ab292216",
+   "metadata": {},
+   "source": [
+    "#### Persiapan Data Frame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "b037f1d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "      <th>C</th>\n",
+       "      <th>D</th>\n",
+       "      <th>E</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>6</td>\n",
+       "      <td>5</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>7</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "      <td>5</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>7</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>7</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>7</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>7</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>7</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>8</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>8</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   A  B  C  D  E\n",
+       "0  6  5  7  1  3\n",
+       "1  5  5  4  7  6\n",
+       "2  4  1  7  5  7\n",
+       "3  7  1  4  5  2\n",
+       "4  5  5  6  1  5\n",
+       "5  1  6  2  6  6\n",
+       "6  7  4  3  3  1\n",
+       "7  7  1  5  7  7\n",
+       "8  1  3  7  4  3\n",
+       "9  8  5  4  8  6"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n_rows = 10\n",
+    "n_cols = 5\n",
+    "cols = tuple('ABCDE')\n",
+    "\n",
+    "df = pd.DataFrame(np.random.randint(1, 10, size=(n_rows, n_cols)), \n",
+    "                  columns=cols)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e9fc1226",
+   "metadata": {},
+   "source": [
+    "#### Seleksi baris dengan `between()`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7611f90e",
+   "metadata": {},
+   "source": [
+    "- Parameter inclusive memiliki nilai default *true*\n",
+    "- Parameter inclusive berguna untuk mengikutsertakan nilai yang tertera dalam penyeleksian."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "0446f8d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "      <th>C</th>\n",
+       "      <th>D</th>\n",
+       "      <th>E</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>7</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "      <td>5</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   A  B  C  D  E\n",
+       "1  5  5  4  7  6\n",
+       "2  4  1  7  5  7\n",
+       "4  5  5  6  1  5"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df['A'].between(2, 5)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "809469ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "      <th>C</th>\n",
+       "      <th>D</th>\n",
+       "      <th>E</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "      <td>5</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   A  B  C  D  E\n",
+       "2  4  1  7  5  7"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df['A'].between(2, 5, inclusive=False)]"
    ]
   }
  ],
